--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI = mongo "mongodb+srv://cluster0.x29hg.mongodb.net/myFirstDatabase" --username Neel
+MONGO_URI = mongodb+srv://Neel:Neel@cluster0.x29hg.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
